<resources>
    <string name="app_name">OwnLibrary</string>
    <string name="title_locations">Locations</string>
    <string name="title_books">Books</string>
    <string name="title_notifications">Notifications</string>
    <string name="isbn_lookup">ISBN Lookup</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="publisher">Publisher</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="manual_add_book">Add Book Manually</string>
    <string name="search_results">Search Results</string>
    <string name="location_name">Location Name</string>
    <string name="description">Description</string>
    <string name="address_2">Address 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="add">Add</string>
    <string name="shelf">Shelf</string>
    <string name="location">Location</string>
    <string name="shelf_name">Shelf Name</string>
    <string name="update">Update</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="isbn_scanner">ISBN Scanner</string>
    <string name="notes">Notes</string>

</resources>