<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.dashboard.AddBookDialogFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/isbn_lookup_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        app:endIconDrawable="@drawable/outline_qr_code_scanner_24"
        app:endIconMode="custom"
        android:hint="@string/isbn_lookup">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:text="@={ViewModel.isbn}"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/author_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/isbn_lookup_field"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:hint="@string/author">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_field"
        app:layout_constraintTop_toBottomOf="@id/author_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        app:endIconMode="custom"
        android:hint="@string/title">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        android:text="@string/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_micro"
        app:layout_constraintTop_toBottomOf="@id/title_field"
        app:layout_constraintStart_toStartOf="@id/title_field"
        app:layout_constraintEnd_toStartOf="@id/button_search"
        android:layout_marginTop="@dimen/margin_normal"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_search"
        android:text="@string/search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/button_cancel"
        app:layout_constraintTop_toBottomOf="@id/title_field"
        app:layout_constraintEnd_toEndOf="@id/title_field"
        android:layout_marginTop="@dimen/margin_normal"/>
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textSize="14sp"
        android:id="@+id/button_manual_add"
        android:text="@string/manual_add_book"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_cancel"
        app:layout_constraintStart_toStartOf="@id/button_cancel"
        app:layout_constraintEnd_toEndOf="@id/button_search"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"/>
</androidx.constraintlayout.widget.ConstraintLayout>