<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_book_list">

    <fragment
        android:id="@+id/navigation_book_list"
        android:name="com.chotaling.ownlibrary.ui.books.BookListFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_book_list" >
        <action
            android:id="@+id/action_navigation_dashboard_to_addBookDialogFragment"
            app:destination="@id/addBookDialogFragment" />
        <action
            android:id="@+id/action_navigation_book_list_to_navigation_book_edit_fragment"
            app:destination="@id/navigation_book_edit_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_locations"
        android:name="com.chotaling.ownlibrary.ui.locations.LocationFragment"
        android:label="@string/title_locations"
        tools:layout="@layout/fragment_locations" >
        <action
            android:id="@+id/action_navigation_locations_to_add_location_fragment"
            app:destination="@id/add_location_fragment" />
        <action
            android:id="@+id/action_navigation_locations_to_add_shelf_fragment"
            app:destination="@id/add_shelf_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.chotaling.ownlibrary.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <dialog
        android:id="@+id/addBookDialogFragment"
        android:name="com.chotaling.ownlibrary.ui.books.BookLookupDialogFragment"
        android:label="AddBookDialogFragment"
        tools:layout="@layout/fragment_dialog_book_lookup" >
        <action
            android:id="@+id/action_addBookDialogFragment_to_book_search_results_fragment"
            app:destination="@id/book_search_results_fragment" />
        <action
            android:id="@+id/action_addBookDialogFragment_to_activity_barcode_scanner"
            app:destination="@id/activity_barcode_scanner" />
    </dialog>

    <fragment
        android:id="@+id/book_search_results_fragment"
        android:name="com.chotaling.ownlibrary.ui.books.BookLookupResultsFragment"
        android:label="@string/search_results"
        tools:layout="@layout/fragment_book_lookup_results" >
        <action
            android:id="@+id/action_book_search_results_fragment_to_add_book_fragment"
            app:destination="@id/navigation_book_edit_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_book_edit_fragment"
        android:name="com.chotaling.ownlibrary.ui.books.BookEditFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_book" >
        <action
            android:id="@+id/action_navigation_book_edit_fragment_to_navigation_book_list"
            app:destination="@id/navigation_book_list" />
    </fragment>

    <dialog
        android:id="@+id/add_location_fragment"
        android:name="com.chotaling.ownlibrary.ui.locations.AddLocationDialogFragment"
        android:label="ADdLocationDialogFragment"
        tools:layout="@layout/fragment_dialog_location_add" >
    </dialog>

    <dialog
        android:id="@+id/add_shelf_fragment"
        android:name="com.chotaling.ownlibrary.ui.locations.AddShelfDialogFragment"
        android:label="AddShelfDialogFragment"
        tools:layout="@layout/fragment_dialog_shelf_add" >
    </dialog>


    <activity
        android:id="@+id/activity_barcode_scanner"
        android:name="com.chotaling.ownlibrary.ui.books.BarcodeScanningActivity"
        android:label="Scanner"
        tools:layout="@layout/activity_barcode_scanner" />

    <fragment
        android:id="@+id/navigation_book_search_fragment"
        android:name="com.chotaling.ownlibrary.ui.books.BookSearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_book_search" />


</navigation>